--- a/src/assets/scss/identityForm.scss
+++ b/src/assets/scss/identityForm.scss
@@ -1,75 +1,35 @@
 .form-wrap {
+  @apply w-full mx-auto flex h-[100vh];
   overflow: hidden;
-  display: flex;
-  height: 100vh;
   justify-content: center;
   align-self: center;
-  margin: 0 auto;
-  width: 90%;
-
-  @media (min-width: 900px) {
-    width: 100%;
-  }
 
   .login-register {
-    margin-bottom: 32px;
-
+    @apply mb-[32px];
     .router-link {
-      color: #000;
+      @apply text-[#000];      
     }
   }
 
   form {
-    padding: 0 10px;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    @apply relative px-[10px] flex flex-col items-center justify-center; 
     flex: 1;
 
-    @media (min-width: 900px) {
-      padding: 0 50px;
-    }
-
     h2 {
-      text-align: center;
-      font-size: 32px;
-      color: #303030;
-      margin-bottom: 40px;
-
-      @media (min-width: 900px) {
-        font-size: 40px;
-      }
+      @apply text-center text-[32px] text-main mb-[40px]; 
     }
-
     .inputs {
-      width: 100%;
-      max-width: 350px;
-
+      @apply w-full max-w-[350px]; 
       .input {
-        position: relative;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 8px;
-
+        @apply relative flex items-center justify-center mb-[8px] ;       
         input {
-          width: 100%;
-          border: none;
-          background-color: #f2f7f6;
-          padding: 4px 4px 4px 30px;
-          height: 50px;
-
+          @apply w-full h-[50px] max-w-[350px] border-none bg-[#f2f7f6] p-[4px] pb-[30px]; 
           &:focus {
             outline: none;
           }
         }
-
         .icon {
-          width: 12px;
-          position: absolute;
-          left: 6px;
+          @apply  w-[12px] left-[6px]; 
         }
       }
     }
@@ -102,17 +62,31 @@
       }
     }
   }
+}
+.btn-style {
+  @apply w-[60px] p-[5px] bg-main text-white rounded-full; 
+}
 
-  .background-identity {
-    display: none;
-    flex: 2;
-    background-size: cover;
-    background-image: url("../assets/background.png");
-    width: 100%;
-    height: 100%;
+.background-identity {
+  display: none;
+  flex: 2;
+  background-size: cover;
+  background-image: url("../assets/background.png");
+  width: 100%;
+  height: 100%;
+}
 
-    @media (min-width: 900px) {
+@media (min-width: 900px) {
+  form {
+    @apply px-[50px];
+    h2 {
+      @apply text-[40px];
+    }
+    .angle {
       display: initial;
     }
+  }
+  .background-identity{
+    display: initial;
   }
 }
