--- a/src/assets/scss/identityForm.scss
+++ b/src/assets/scss/identityForm.scss
@@ -52,7 +52,7 @@
   }
 }
 .btn-style {
-  @apply w-[60px] p-[5px] bg-funsugarMain text-main  hover:bg-main hover:text-white rounded-full duration-300; 
+  @apply py-2 px-4 bg-funsugarMain text-main  hover:bg-main hover:text-white rounded-full duration-300; 
 }
 
 .background-identity {
